--- a/css/main.css
+++ b/css/main.css
@@ -21,10 +21,10 @@ footer.footer .social-link:hover {
     background-color: #155d74;
     text-decoration: none;
   }
-  a {
+  /*a {
     color: #1D809F;
   }
   
   a:hover, a:focus, a:active {
     color: #155d74;
-  }
+  }*/
